Fix Element form label sizing, spacing and alignment

--- a/src/Mapbender/ManagerBundle/Resources/public/sass/element/form.scss
+++ b/src/Mapbender/ManagerBundle/Resources/public/sass/element/form.scss
@@ -1,8 +1,12 @@
 .elementForm {
-  $labelWidth: 70px;
+  .labelInput, .labelCheck, .checkWrapper {
+    font-size: 11px;
+  }
   .labelInput {
-    width: $labelWidth;
+    width: 70px;
     margin-bottom: $space/2;
+    line-height: $inputHeight;
+    vertical-align: top;
   }
   textarea {
     height: 150px;
